includes = include_directories(
  'wsf/include',
  'stack/ble-host/include',
  'stack/ble-host/sources/stack/cfg',
  'stack/ble-profiles/include/app',
  'stack/ble-profiles/sources/apps/app',
  'stack/ble-profiles/sources/services',
  'stack/ble-profiles/sources/profiles',
  'stack/ble-profiles/sources/profiles/include',
  'stack/ble-profiles/sources/apps',
  'stack/ble-host/sources/stack/dm',
  'link_layer/controller/sources/ble/include/',
  'stack/ble-host/sources/hci/dual_chip',
  'stack/ble-host/sources/stack/hci',
  'link_layer/platform/common/include',
  'link_layer/controller/include/ble/',
  'wsf/include/util',
  'link_layer/controller/include/common/',
  'stack/ble-host/sources/stack/smp/',
  'stack/ble-host/sources/sec/common',
  'link_layer/controller/sources/ble/lhci/',
  'link_layer/thirdparty/uecc/',
  'stack/platform/max32665/',
)

sources = files(
'stack/ble-profiles/sources/apps/dats/dats_main.c',
'stack/ble-profiles/sources/apps/uribeacon/uribeacon_main.c',
'stack/ble-profiles/sources/apps/tag/tag_main.c',
'stack/ble-profiles/sources/apps/tag/tag_main_wdxs.c',
'stack/ble-profiles/sources/apps/medc/medc_htp.c',
'stack/ble-profiles/sources/apps/medc/medc_main.c',
'stack/ble-profiles/sources/apps/medc/medc_wsp.c',
'stack/ble-profiles/sources/apps/medc/medc_glp.c',
'stack/ble-profiles/sources/apps/medc/medc_hrp.c',
'stack/ble-profiles/sources/apps/medc/medc_plx.c',
'stack/ble-profiles/sources/apps/medc/medc_blp.c',
'stack/ble-profiles/sources/apps/meds/meds_wsp.c',
'stack/ble-profiles/sources/apps/meds/meds_main.c',
'stack/ble-profiles/sources/apps/meds/meds_blp.c',
'stack/ble-profiles/sources/apps/meds/meds_htp.c',
'stack/ble-profiles/sources/apps/meds/meds_plx.c',
'stack/ble-profiles/sources/apps/meds/meds_glp.c',
'stack/ble-profiles/sources/apps/hidapp/hidapp_main.c',
'stack/ble-profiles/sources/apps/watch/watch_main.c',
'stack/ble-profiles/sources/apps/datc/datc_main.c',
'stack/ble-profiles/sources/apps/gluc/gluc_main.c',
'stack/ble-profiles/sources/apps/fit/fit_main.c',
'stack/ble-profiles/sources/apps/cycling/cycling_main.c',
'stack/ble-profiles/sources/apps/sensor/sensor_main.c',
'stack/ble-profiles/sources/apps/app/app_disc.c',
'stack/ble-profiles/sources/apps/app/app_slave.c',
'stack/ble-profiles/sources/apps/app/app_master.c',
'stack/ble-profiles/sources/apps/app/app_master_ae.c',
'stack/ble-profiles/sources/apps/app/app_slave_leg.c',
'stack/ble-profiles/sources/apps/app/app_slave_ae.c',
'stack/ble-profiles/sources/apps/app/app_main.c',
'stack/ble-profiles/sources/apps/app/app_server.c',
'stack/ble-profiles/sources/apps/app/app_master_leg.c',
'stack/ble-profiles/sources/apps/app/common/app_db.c',
'stack/ble-profiles/sources/apps/app/common/app_ui.c',
'stack/ble-profiles/sources/apps/app/common/app_hw.c',
'stack/ble-profiles/sources/apps/app/app_terminal.c',
'stack/ble-profiles/sources/apps/wdxs/wdxs_oad.c',
'stack/ble-profiles/sources/profiles/htps/htps_main.c',
'stack/ble-profiles/sources/profiles/hid/hid_main.c',
'stack/ble-profiles/sources/profiles/wspc/wspc_main.c',
'stack/ble-profiles/sources/profiles/hrpc/hrpc_main.c',
'stack/ble-profiles/sources/profiles/uribeacon/uricfg_main.c',
'stack/ble-profiles/sources/profiles/gap/gap_main.c',
'stack/ble-profiles/sources/profiles/glps/glps_db.c',
'stack/ble-profiles/sources/profiles/glps/glps_main.c',
'stack/ble-profiles/sources/profiles/fmpl/fmpl_main.c',
'stack/ble-profiles/sources/profiles/anpc/anpc_main.c',
'stack/ble-profiles/sources/profiles/wsps/wsps_main.c',
'stack/ble-profiles/sources/profiles/wdxc/wdxc_ft.c',
'stack/ble-profiles/sources/profiles/wdxc/wdxc_main.c',
'stack/ble-profiles/sources/profiles/wdxc/wdxc_stream.c',
'stack/ble-profiles/sources/profiles/htpc/htpc_main.c',
'stack/ble-profiles/sources/profiles/hrps/hrps_main.c',
'stack/ble-profiles/sources/profiles/plxpc/plxpc_main.c',
'stack/ble-profiles/sources/profiles/blpc/blpc_main.c',
'stack/ble-profiles/sources/profiles/cscp/cscps_main.c',
'stack/ble-profiles/sources/profiles/cpp/cpps_main.c',
'stack/ble-profiles/sources/profiles/glpc/glpc_main.c',
'stack/ble-profiles/sources/profiles/gatt/gatt_main.c',
'stack/ble-profiles/sources/profiles/sensor/gyro_main.c',
'stack/ble-profiles/sources/profiles/sensor/temp_main.c',
'stack/ble-profiles/sources/profiles/rscp/rscps_main.c',
'stack/ble-profiles/sources/profiles/blps/blps_main.c',
'stack/ble-profiles/sources/profiles/plxps/plxps_db.c',
'stack/ble-profiles/sources/profiles/plxps/plxps_main.c',
'stack/ble-profiles/sources/profiles/dis/dis_main.c',
'stack/ble-profiles/sources/profiles/tipc/tipc_main.c',
'stack/ble-profiles/sources/profiles/bas/bas_main.c',
'stack/ble-profiles/sources/profiles/udsc/udsc_main.c',
'stack/ble-profiles/sources/profiles/scpps/scpps_main.c',
'stack/ble-profiles/sources/profiles/wpc/wpc_main.c',
'stack/ble-profiles/sources/profiles/paspc/paspc_main.c',
'stack/ble-profiles/sources/profiles/wdxs/wdxs_stream.c',
'stack/ble-profiles/sources/profiles/wdxs/wdxs_au.c',
'stack/ble-profiles/sources/profiles/wdxs/wdxs_phy.c',
'stack/ble-profiles/sources/profiles/wdxs/wdxs_ft.c',
'stack/ble-profiles/sources/profiles/wdxs/wdxs_dc.c',
'stack/ble-profiles/sources/profiles/wdxs/wdxs_main.c',
'stack/ble-profiles/sources/services/svc_gls.c',
'stack/ble-profiles/sources/services/svc_cps.c',
'stack/ble-profiles/sources/services/svc_time.c',
'stack/ble-profiles/sources/services/svc_wp.c',
'stack/ble-profiles/sources/services/svc_alert.c',
'stack/ble-profiles/sources/services/svc_rscs.c',
'stack/ble-profiles/sources/services/svc_hts.c',
'stack/ble-profiles/sources/services/svc_temp.c',
'stack/ble-profiles/sources/services/svc_core.c',
'stack/ble-profiles/sources/services/svc_hid.c',
'stack/ble-profiles/sources/services/svc_scpss.c',
'stack/ble-profiles/sources/services/svc_hrs.c',
'stack/ble-profiles/sources/services/svc_plxs.c',
'stack/ble-profiles/sources/services/svc_cscs.c',
'stack/ble-profiles/sources/services/svc_ipss.c',
'stack/ble-profiles/sources/services/svc_wdxs.c',
'stack/ble-profiles/sources/services/svc_uricfg.c',
'stack/ble-profiles/sources/services/svc_dis.c',
'stack/ble-profiles/sources/services/svc_px.c',
'stack/ble-profiles/sources/services/svc_batt.c',
'stack/ble-profiles/sources/services/svc_wss.c',
'stack/ble-profiles/sources/services/svc_gyro.c',
'stack/ble-profiles/sources/services/svc_bps.c',
'stack/platform/max32665/hci_vs.c',
'stack/platform/max32665/hci_drv.c',
#'stack/platform/max32665/hci_drv_sdma.c',
'stack/platform/max32665/hci_tr.c',
'stack/platform/max32665/wsf_cs.c',
'stack/platform/max32665/wsf_os.c',
'stack/ble-host/sources/stack/dm/dm_adv.c',
'stack/ble-host/sources/stack/dm/dm_main.c',
'stack/ble-host/sources/stack/dm/dm_conn_master_ae.c',
'stack/ble-host/sources/stack/dm/dm_conn_slave_ae.c',
'stack/ble-host/sources/stack/dm/dm_dev_priv.c',
'stack/ble-host/sources/stack/dm/dm_dev.c',
'stack/ble-host/sources/stack/dm/dm_conn.c',
'stack/ble-host/sources/stack/dm/dm_conn_slave.c',
'stack/ble-host/sources/stack/dm/dm_scan_leg.c',
'stack/ble-host/sources/stack/dm/dm_scan_ae.c',
'stack/ble-host/sources/stack/dm/dm_conn_sm.c',
'stack/ble-host/sources/stack/dm/dm_sec_master.c',
'stack/ble-host/sources/stack/dm/dm_scan.c',
'stack/ble-host/sources/stack/dm/dm_phy.c',
'stack/ble-host/sources/stack/dm/dm_sec_slave.c',
'stack/ble-host/sources/stack/dm/dm_priv.c',
'stack/ble-host/sources/stack/dm/dm_sync_ae.c',
'stack/ble-host/sources/stack/dm/dm_conn_master_leg.c',
'stack/ble-host/sources/stack/dm/dm_conn_slave_leg.c',
'stack/ble-host/sources/stack/dm/dm_adv_ae.c',
'stack/ble-host/sources/stack/dm/dm_conn_cte.c',
'stack/ble-host/sources/stack/dm/dm_sec_lesc.c',
'stack/ble-host/sources/stack/dm/dm_adv_leg.c',
'stack/ble-host/sources/stack/dm/dm_past.c',
'stack/ble-host/sources/stack/dm/dm_conn_master.c',
'stack/ble-host/sources/stack/dm/dm_sec.c',
'stack/ble-host/sources/stack/l2c/l2c_coc.c',
'stack/ble-host/sources/stack/l2c/l2c_main.c',
'stack/ble-host/sources/stack/l2c/l2c_slave.c',
'stack/ble-host/sources/stack/l2c/l2c_master.c',
'stack/ble-host/sources/stack/att/attc_proc.c',
'stack/ble-host/sources/stack/att/attc_main.c',
'stack/ble-host/sources/stack/att/att_uuid.c',
'stack/ble-host/sources/stack/att/atts_proc.c',
'stack/ble-host/sources/stack/att/atts_read.c',
'stack/ble-host/sources/stack/att/atts_csf.c',
'stack/ble-host/sources/stack/att/atts_write.c',
'stack/ble-host/sources/stack/att/atts_ind.c',
'stack/ble-host/sources/stack/att/atts_sign.c',
'stack/ble-host/sources/stack/att/attc_read.c',
'stack/ble-host/sources/stack/att/atts_dyn.c',
'stack/ble-host/sources/stack/att/att_main.c',
'stack/ble-host/sources/stack/att/attc_disc.c',
'stack/ble-host/sources/stack/att/atts_ccc.c',
'stack/ble-host/sources/stack/att/attc_sign.c',
'stack/ble-host/sources/stack/att/atts_main.c',
'stack/ble-host/sources/stack/att/attc_write.c',
'stack/ble-host/sources/stack/hci/hci_main.c',
'stack/ble-host/sources/stack/cfg/cfg_stack.c',
'stack/ble-host/sources/stack/smp/smpi_sm.c',
'stack/ble-host/sources/stack/smp/smpr_sc_act.c',
'stack/ble-host/sources/stack/smp/smp_db.c',
'stack/ble-host/sources/stack/smp/smp_non.c',
'stack/ble-host/sources/stack/smp/smpr_sc_sm.c',
'stack/ble-host/sources/stack/smp/smpi_sc_act.c',
'stack/ble-host/sources/stack/smp/smp_main.c',
'stack/ble-host/sources/stack/smp/smpi_act.c',
'stack/ble-host/sources/stack/smp/smp_sc_act.c',
'stack/ble-host/sources/stack/smp/smpr_sm.c',
'stack/ble-host/sources/stack/smp/smp_act.c',
'stack/ble-host/sources/stack/smp/smpr_act.c',
'stack/ble-host/sources/stack/smp/smp_sc_main.c',
'stack/ble-host/sources/stack/smp/smpi_sc_sm.c',
'stack/ble-host/sources/hci/common/hci_core.c',
'stack/ble-host/sources/hci/dual_chip/hci_cmd_past.c',
'stack/ble-host/sources/hci/dual_chip/hci_evt.c',
'stack/ble-host/sources/hci/dual_chip/hci_cmd_ae.c',
'stack/ble-host/sources/hci/dual_chip/hci_cmd.c',
'stack/ble-host/sources/hci/dual_chip/hci_cmd_phy.c',
'stack/ble-host/sources/hci/dual_chip/hci_core_ps.c',
'stack/ble-host/sources/hci/dual_chip/hci_cmd_cte.c',
'stack/ble-host/sources/hci/dual_chip/hci_vs_ae.c',
'stack/ble-host/sources/sec/pal/sec_ccm.c',
'stack/ble-host/sources/sec/common/sec_ccm_hci.c',
'stack/ble-host/sources/sec/common/sec_aes.c',
'stack/ble-host/sources/sec/common/sec_cmac_hci.c',
'stack/ble-host/sources/sec/common/sec_main.c',
'stack/ble-host/sources/sec/common/sec_ecc_hci.c',
'wsf/sources/util/crc32.c',
'wsf/sources/util/prand.c',
'wsf/sources/util/bstream.c',
'wsf/sources/util/terminal.c',
'wsf/sources/util/fcs.c',
'wsf/sources/util/calc128.c',
'wsf/sources/util/bda.c',
'wsf/sources/util/wstr.c',
'wsf/sources/util/print.c',
'wsf/sources/port/baremetal/wsf_msg.c',
'wsf/sources/port/baremetal/wsf_bufio.c',
'wsf/sources/port/baremetal/wsf_detoken.c',
'wsf/sources/port/baremetal/wsf_efs.c',
'wsf/sources/port/baremetal/wsf_queue.c',
'wsf/sources/port/baremetal/wsf_nvm.c',
'wsf/sources/port/baremetal/wsf_timer.c',
'wsf/sources/port/baremetal/wsf_buf.c',
'wsf/sources/port/baremetal/wsf_trace.c',
'wsf/sources/port/baremetal/wsf_assert.c',
'wsf/sources/port/baremetal/wsf_heap.c',
'link_layer/platform/max32665/lhci_vs.c',
'link_layer/platform/max32665/chci_drv.c',
'link_layer/platform/max32665/ll_tester.c',
'link_layer/platform/max32665/ll_math_aes.c',
'link_layer/platform/common/sources/bb/ble/bb_ble_pdufilt.c',
'link_layer/platform/common/sources/bb/ble/bb_ble_periodiclist.c',
'link_layer/platform/common/sources/bb/ble/bb_ble_reslist.c',
'link_layer/platform/common/sources/bb/ble/bb_ble_whitelist.c',
'link_layer/platform/common/sources/ll/ll_math_ecc.c',
'link_layer/platform/common/sources/ll/lhci_cmd_vs_ext.c',
'link_layer/platform/common/sources/chci/chci_tr_serial.c',
'link_layer/platform/common/sources/chci/chci_tr.c',
'link_layer/thirdparty/uecc/uECC_ll.c',
'link_layer/controller/sources/ble/bb/bb_ble_adv_master.c',
'link_layer/controller/sources/ble/bb/bb_ble_adv_slave.c',
'link_layer/controller/sources/ble/bb/bb_ble_conn_master.c',
'link_layer/controller/sources/ble/bb/bb_ble_adv_slave_ae.c',
'link_layer/controller/sources/ble/bb/bb_ble_conn.c',
'link_layer/controller/sources/ble/bb/bb_ble_conn_slave.c',
'link_layer/controller/sources/ble/bb/bb_ble_main.c',
'link_layer/controller/sources/ble/bb/bb_ble_test.c',
'link_layer/controller/sources/ble/bb/bb_ble_adv_master_ae.c',
'link_layer/controller/sources/ble/ll/ll_init_enc_slave.c',
'link_layer/controller/sources/ble/ll/ll_init_init_master.c',
'link_layer/controller/sources/ble/ll/ll_init_sc.c',
'link_layer/controller/sources/ble/ll/ll_init_master_phy.c',
'link_layer/controller/sources/ble/ll/ll_main_phy.c',
'link_layer/controller/sources/ble/ll/ll_main_conn_slave.c',
'link_layer/controller/sources/ble/ll/ll_init_conn_cs2.c',
'link_layer/controller/sources/ble/ll/ll_main.c',
'link_layer/controller/sources/ble/ll/ll_main_sc.c',
'link_layer/controller/sources/ble/ll/ll_main_diag.c',
'link_layer/controller/sources/ble/ll/ll_init_adv_slave_ae.c',
'link_layer/controller/sources/ble/ll/ll_init_adv_slave.c',
'link_layer/controller/sources/ble/ll/ll_main_adv_slave.c',
'link_layer/controller/sources/ble/ll/ll_main_priv.c',
'link_layer/controller/sources/ble/ll/ll_main_adv_slave_ae.c',
'link_layer/controller/sources/ble/ll/ll_init_slave_phy.c',
'link_layer/controller/sources/ble/ll/ll_main_conn_master_ae.c',
'link_layer/controller/sources/ble/ll/ll_init.c',
'link_layer/controller/sources/ble/ll/ll_main_enc_slave.c',
'link_layer/controller/sources/ble/ll/ll_main_enc_master.c',
'link_layer/controller/sources/ble/ll/ll_main_dtm.c',
'link_layer/controller/sources/ble/ll/ll_init_adv_master_ae.c',
'link_layer/controller/sources/ble/ll/ll_init_adv_master.c',
'link_layer/controller/sources/ble/ll/ll_init_init_master_ae.c',
'link_layer/controller/sources/ble/ll/ll_init_enc_master.c',
'link_layer/controller/sources/ble/ll/ll_math.c',
'link_layer/controller/sources/ble/ll/ll_init_priv.c',
'link_layer/controller/sources/ble/ll/ll_main_conn.c',
'link_layer/controller/sources/ble/ll/ll_main_conn_master.c',
'link_layer/controller/sources/ble/ll/ll_main_adv_master_ae.c',
'link_layer/controller/sources/ble/ll/ll_main_adv_master.c',
'link_layer/controller/sources/ble/ll/ll_init_conn_master.c',
'link_layer/controller/sources/ble/ll/ll_init_conn_slave.c',
'link_layer/controller/sources/ble/lmgr/lmgr_events.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main_priv.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main_slave.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main_adv_master_ae.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main_master.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main_sc.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main_adv_slave_ae.c',
'link_layer/controller/sources/ble/lmgr/lmgr_main_conn.c',
'link_layer/controller/sources/ble/lctr/lctr_pdu_enc.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_adv_slave_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_main_enc_master.c',
'link_layer/controller/sources/ble/lctr/lctr_main_conn.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_init_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_adv_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_conn_master.c',
'link_layer/controller/sources/ble/lctr/lctr_act_enc.c',
'link_layer/controller/sources/ble/lctr/lctr_main_adv_master.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_conn_master.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_llcp_conn.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_llcp_enc_master.c',
'link_layer/controller/sources/ble/lctr/lctr_main.c',
'link_layer/controller/sources/ble/lctr/lctr_main_adv_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_main_init_master.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_llcp_conn_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_init_master.c',
'link_layer/controller/sources/ble/lctr/lctr_main_adv_slave_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_llcp_enc_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_act_phy.c',
'link_layer/controller/sources/ble/lctr/lctr_main_init_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_adv_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_main_sc.c',
'link_layer/controller/sources/ble/lctr/lctr_act_conn_master.c',
'link_layer/controller/sources/ble/lctr/lctr_act_adv_master.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_adv_master.c',
'link_layer/controller/sources/ble/lctr/lctr_main_priv.c',
'link_layer/controller/sources/ble/lctr/lctr_pdu_adv_slave_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_adv_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_pdu_adv_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_adv_master.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_adv_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_act_init_master.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_llcp_slave_phy.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_adv_slave_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_pdu_adv_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_act_init_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_conn_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_act_adv_slave_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_main_slave_phy.c',
'link_layer/controller/sources/ble/lctr/lctr_act_adv_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_main_conn_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_act_enc_master.c',
'link_layer/controller/sources/ble/lctr/lctr_act_conn.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_conn_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_conn.c',
'link_layer/controller/sources/ble/lctr/lctr_main_conn_master.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_llcp_conn_master.c',
'link_layer/controller/sources/ble/lctr/lctr_act_conn_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_sm_llcp_master_phy.c',
'link_layer/controller/sources/ble/lctr/lctr_main_enc_slave.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_init_master.c',
'link_layer/controller/sources/ble/lctr/lctr_isr_init_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_main_adv_master_ae.c',
#'link_layer/controller/sources/ble/lctr/lctr_main_tester.c',
'link_layer/controller/sources/ble/lctr/lctr_main_master_phy.c',
'link_layer/controller/sources/ble/lctr/lctr_pdu_conn.c',
'link_layer/controller/sources/ble/lctr/lctr_main_conn_data.c',
'link_layer/controller/sources/ble/lctr/lctr_act_adv_master_ae.c',
'link_layer/controller/sources/ble/lctr/lctr_main_conn_cs2.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_adv_priv.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_sc.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_enc_slave.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_phy.c',
'link_layer/controller/sources/ble/lhci/lhci_init.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_adv_slave_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_conn_priv.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_conn.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_conn_cs2.c',
'link_layer/controller/sources/ble/lhci/lhci_init_adv_slave.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_adv_master_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_init_adv_master_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_sc.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_conn_master_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_conn_priv.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_vs.c',
'link_layer/controller/sources/ble/lhci/lhci_evt.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_adv_master_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_adv_slave.c',
'link_layer/controller/sources/ble/lhci/lhci_init_enc_slave.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_adv_slave.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_adv_master.c',
'link_layer/controller/sources/ble/lhci/lhci_init_conn_priv.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_conn_master.c',
'link_layer/controller/sources/ble/lhci/lhci_init_adv_priv.c',
'link_layer/controller/sources/ble/lhci/lhci_init_conn_master_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_phy.c',
'link_layer/controller/sources/ble/lhci/lhci_init_phy.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_enc_master.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_adv_master.c',
'link_layer/controller/sources/ble/lhci/lhci_main.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_conn.c',
'link_layer/controller/sources/ble/lhci/lhci_init_adv_master.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_enc_master.c',
'link_layer/controller/sources/ble/lhci/lhci_init_sc.c',
'link_layer/controller/sources/ble/lhci/lhci_init_conn_cs2.c',
'link_layer/controller/sources/ble/lhci/lhci_init_conn.c',
'link_layer/controller/sources/ble/lhci/lhci_evt_adv_slave_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_conn_master.c',
'link_layer/controller/sources/ble/lhci/lhci_init_adv_slave_ae.c',
'link_layer/controller/sources/ble/lhci/lhci_init_conn_master.c',
'link_layer/controller/sources/ble/lhci/lhci_init_enc_master.c',
'link_layer/controller/sources/ble/lhci/lhci_cmd_enc_slave.c',
'link_layer/controller/sources/ble/sch/sch_ble.c',
'link_layer/controller/sources/ble/sch/sch_rm.c',
'link_layer/controller/sources/ble/init/init_ctr.c',
'link_layer/controller/sources/ble/init/init_ext.c',
'link_layer/controller/sources/ble/init/init_ctr_ext.c',
'link_layer/controller/sources/ble/init/init.c',
'link_layer/controller/sources/common/bb/bb_main.c',
'link_layer/controller/sources/common/sch/sch_main.c',
'link_layer/controller/sources/common/sch/sch_list.c',
)

lib = static_library(
  'ble',
  sources,
  include_directories: includes,
  dependencies: periphdriver,
  c_args: ['-w',
            '-DLHCI_ENABLE_VS=TRUE',
            '-DBB_CLK_RATE_HZ=1600000',
            '-DLCTR_CONN_NO_TIFS_REASSEMBLY=1',
            '-DBB_ENABLE_INLINE_ENC_TX=1',
            '-DBB_ENABLE_INLINE_DEC_RX=1',
            '-DFORCE_PMU_WAKEUP=1']
)

ble = declare_dependency(
  include_directories: includes,
  link_with: lib,
  dependencies: periphdriver,
)
