freertos_sdk_includes = include_directories(
  './Source/include/',
  './Source/portable/GCC/ARM_CM4F/',
  '../FreeRTOS-Plus/Source/FreeRTOS-Plus-CLI/',
)

freertos_sdk_sources = files(
  './Source/croutine.c',
  './Source/event_groups.c',
  './Source/list.c',
  './Source/queue.c',
  './Source/tasks.c',
  './Source/timers.c',
  './Source/portable/GCC/ARM_CM4F/port.c',
  '../FreeRTOS-Plus/Source/FreeRTOS-Plus-CLI/FreeRTOS_CLI.c',
  './Source/portable/MemMang/heap_2.c',
)
